--- a/devel/haskell-language-server/Makefile
+++ b/devel/haskell-language-server/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2024/11/14 22:19:21 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2025/01/31 15:41:00 pho Exp $
 
-DISTNAME=	haskell-language-server-2.7.0.0
+DISTNAME=	haskell-language-server-2.9.0.0
 PKGNAME=	${DISTNAME}
-PKGREVISION=	5
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -10,20 +9,15 @@ COMMENT=	LSP server for GHC
 LICENSE=	apache-2.0
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	Diff	\
-	lsp	\
-	lsp-types
+	Diff
 
 # HLS is built with optparse-applicative, and can generate shell completion
 # scripts automatically.
+.include "../../devel/hs-optparse-applicative/application.mk"
+OPTPARSE_APPLICATIVE_EXECUTABLES+=	ghcide-bench
 OPTPARSE_APPLICATIVE_EXECUTABLES+=	haskell-language-server
 OPTPARSE_APPLICATIVE_EXECUTABLES+=	haskell-language-server-wrapper
-.include "../../devel/hs-optparse-applicative/application.mk"
 
-#
-# These contains a lot of duplicate dependencies but it's intentional so
-# that we can easily maintain the list.
-#
 # lib:haskell-language-server
 .include "../../converters/hs-aeson-pretty/buildlink3.mk"
 .include "../../devel/hs-data-default/buildlink3.mk"
@@ -31,7 +25,6 @@ OPTPARSE_APPLICATIVE_EXECUTABLES+=	haskell-language-server-wrapper
 .include "../../devel/hs-ghcide/buildlink3.mk"
 .include "../../devel/hs-githash/buildlink3.mk"
 .include "../../devel/hs-hie-bios/buildlink3.mk"
-.include "../../devel/hs-hiedb/buildlink3.mk"
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
 .include "../../devel/hs-optparse-applicative/buildlink3.mk"
 .include "../../devel/hs-optparse-simple/buildlink3.mk"
@@ -44,17 +37,22 @@ OPTPARSE_APPLICATIVE_EXECUTABLES+=	haskell-language-server-wrapper
 .include "../../devel/hs-lsp-types/buildlink3.mk"
 .include "../../sysutils/hs-process-extras/buildlink3.mk"
 
+# lib:hls-cabal-gild-plugin
+.include "../../devel/hs-ghcide/buildlink3.mk"
+.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
+.include "../../devel/hs-lsp-types/buildlink3.mk"
+.include "../../sysutils/hs-process-extras/buildlink3.mk"
+
 # lib:hls-cabal-plugin
 .include "../../misc/hs-extra/buildlink3.mk"
 .include "../../devel/hs-ghcide/buildlink3.mk"
 .include "../../devel/hs-hashable/buildlink3.mk"
-.include "../../devel/hs-hls-graph/buildlink3.mk"
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
+.include "../../devel/hs-hls-graph/buildlink3.mk"
 .include "../../devel/hs-lens/buildlink3.mk"
 .include "../../devel/hs-lsp/buildlink3.mk"
 .include "../../devel/hs-lsp-types/buildlink3.mk"
 .include "../../textproc/hs-regex-tdfa/buildlink3.mk"
-.include "../../textproc/hs-text-rope/buildlink3.mk"
 .include "../../devel/hs-unordered-containers/buildlink3.mk"
 
 # lib:hls-class-plugin
@@ -104,54 +102,55 @@ OPTPARSE_APPLICATIVE_EXECUTABLES+=	haskell-language-server-wrapper
 # lib:hls-rename-plugin
 .include "../../devel/hs-ghcide/buildlink3.mk"
 .include "../../devel/hs-hashable/buildlink3.mk"
-.include "../../devel/hs-hie-compat/buildlink3.mk"
 .include "../../devel/hs-hiedb/buildlink3.mk"
+.include "../../devel/hs-hie-compat/buildlink3.mk"
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
 .include "../../devel/hs-lens/buildlink3.mk"
-.include "../../devel/hs-lsp/buildlink3.mk"
 .include "../../devel/hs-lsp-types/buildlink3.mk"
 .include "../../math/hs-mod/buildlink3.mk"
 .include "../../devel/hs-syb/buildlink3.mk"
 .include "../../devel/hs-unordered-containers/buildlink3.mk"
 
+CONFIGURE_ARGS+=	-f -retrie # Broken at the moment.
 # lib:hls-retrie-plugin
-.include "../../converters/hs-aeson/buildlink3.mk"
-.include "../../misc/hs-extra/buildlink3.mk"
-.include "../../devel/hs-ghcide/buildlink3.mk"
-.include "../../devel/hs-hashable/buildlink3.mk"
-.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
-.include "../../devel/hs-lens/buildlink3.mk"
-.include "../../devel/hs-lsp/buildlink3.mk"
-.include "../../devel/hs-lsp-types/buildlink3.mk"
-.include "../../devel/retrie/buildlink3.mk"
-.include "../../devel/hs-safe-exceptions/buildlink3.mk"
-.include "../../devel/hs-unordered-containers/buildlink3.mk"
+#.include "../../converters/hs-aeson/buildlink3.mk"
+#.include "../../misc/hs-extra/buildlink3.mk"
+#.include "../../devel/hs-ghcide/buildlink3.mk"
+#.include "../../devel/hs-hashable/buildlink3.mk"
+#.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
+#.include "../../devel/hs-lens/buildlink3.mk"
+#.include "../../devel/hs-lsp/buildlink3.mk"
+#.include "../../devel/hs-lsp-types/buildlink3.mk"
+#.include "../../devel/retrie/buildlink3.mk"
+#.include "../../devel/hs-safe-exceptions/buildlink3.mk"
+#.include "../../devel/hs-unordered-containers/buildlink3.mk"
 
+CONFIGURE_ARGS+=	-f -hlint # Broken at the moment.
 # lib:hls-hlint-plugin
-.include "../../converters/hs-aeson/buildlink3.mk"
-.include "../../devel/hs-apply-refact/buildlink3.mk"
-.include "../../devel/hs-ghc-lib-parser/buildlink3.mk"
-.include "../../devel/hs-ghc-lib-parser-ex/buildlink3.mk"
-.include "../../devel/hs-ghcide/buildlink3.mk"
-.include "../../devel/hs-hashable/buildlink3.mk"
-.include "../../devel/hlint/buildlink3.mk"
-.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
-.include "../../devel/hs-lens/buildlink3.mk"
-.include "../../devel/hs-lsp/buildlink3.mk"
-.include "../../devel/hs-refact/buildlink3.mk"
-.include "../../textproc/hs-regex-tdfa/buildlink3.mk"
-.include "../../sysutils/hs-temporary/buildlink3.mk"
-.include "../../devel/hs-unordered-containers/buildlink3.mk"
+#.include "../../converters/hs-aeson/buildlink3.mk"
+#.include "../../devel/hs-ghcide/buildlink3.mk"
+#.include "../../devel/hs-hashable/buildlink3.mk"
+#.include "../../devel/hlint/buildlink3.mk"
+#.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
+#.include "../../devel/hs-lens/buildlink3.mk"
+#.include "../../devel/hs-lsp/buildlink3.mk"
+#.include "../../devel/hs-refact/buildlink3.mk"
+#.include "../../textproc/hs-regex-tdfa/buildlink3.mk"
+#.include "../../sysutils/hs-temporary/buildlink3.mk"
+#.include "../../devel/hs-unordered-containers/buildlink3.mk"
+#.include "../../devel/hs-ghc-lib-parser-ex/buildlink3.mk"
+#.include "../../devel/hs-apply-refact/buildlink3.mk"
+#.include "../../devel/hs-ghc-lib-parser/buildlink3.mk"
 
 # lib:hls-stan-plugin
-.include "../../devel/hs-ghcide/buildlink3.mk"
 .include "../../devel/hs-hashable/buildlink3.mk"
 .include "../../devel/hs-hie-compat/buildlink3.mk"
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
+.include "../../devel/hs-ghcide/buildlink3.mk"
 .include "../../devel/hs-lsp-types/buildlink3.mk"
+.include "../../devel/hs-unordered-containers/buildlink3.mk"
 .include "../../devel/stan/buildlink3.mk"
 .include "../../devel/hs-trial/buildlink3.mk"
-.include "../../devel/hs-unordered-containers/buildlink3.mk"
 
 # lib:hls-module-name-plugin
 .include "../../converters/hs-aeson/buildlink3.mk"
@@ -190,11 +189,11 @@ OPTPARSE_APPLICATIVE_EXECUTABLES+=	haskell-language-server-wrapper
 .include "../../devel/hs-syb/buildlink3.mk"
 
 # lib:hls-qualify-imported-names-plugin
-.include "../../devel/hs-dlist/buildlink3.mk"
 .include "../../devel/hs-ghcide/buildlink3.mk"
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
 .include "../../devel/hs-lens/buildlink3.mk"
 .include "../../devel/hs-lsp/buildlink3.mk"
+.include "../../devel/hs-dlist/buildlink3.mk"
 
 # lib:hls-code-range-plugin
 .include "../../misc/hs-extra/buildlink3.mk"
@@ -216,8 +215,8 @@ OPTPARSE_APPLICATIVE_EXECUTABLES+=	haskell-language-server-wrapper
 # lib:hls-gadt-plugin
 .include "../../converters/hs-aeson/buildlink3.mk"
 .include "../../misc/hs-extra/buildlink3.mk"
-.include "../../devel/hs-ghc-exactprint/buildlink3.mk"
 .include "../../devel/hs-ghcide/buildlink3.mk"
+.include "../../devel/hs-ghc-exactprint/buildlink3.mk"
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
 .include "../../devel/hs-lens/buildlink3.mk"
 .include "../../devel/hs-lsp/buildlink3.mk"
@@ -230,21 +229,21 @@ OPTPARSE_APPLICATIVE_EXECUTABLES+=	haskell-language-server-wrapper
 .include "../../devel/hs-lsp/buildlink3.mk"
 
 # lib:hls-explicit-record-fields-plugin
-.include "../../converters/hs-aeson/buildlink3.mk"
 .include "../../devel/hs-ghcide/buildlink3.mk"
-.include "../../devel/hs-hls-graph/buildlink3.mk"
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
-.include "../../devel/hs-lens/buildlink3.mk"
 .include "../../devel/hs-lsp/buildlink3.mk"
+.include "../../devel/hs-lens/buildlink3.mk"
+.include "../../devel/hs-hls-graph/buildlink3.mk"
 .include "../../devel/hs-syb/buildlink3.mk"
+.include "../../converters/hs-aeson/buildlink3.mk"
 
 # lib:hls-overloaded-record-dot-plugin
 .include "../../converters/hs-aeson/buildlink3.mk"
 .include "../../devel/hs-ghcide/buildlink3.mk"
-.include "../../devel/hs-hls-graph/buildlink3.mk"
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
-.include "../../devel/hs-lens/buildlink3.mk"
 .include "../../devel/hs-lsp/buildlink3.mk"
+.include "../../devel/hs-lens/buildlink3.mk"
+.include "../../devel/hs-hls-graph/buildlink3.mk"
 .include "../../devel/hs-syb/buildlink3.mk"
 
 # lib:hls-floskell-plugin
@@ -253,57 +252,84 @@ OPTPARSE_APPLICATIVE_EXECUTABLES+=	haskell-language-server-wrapper
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
 .include "../../devel/hs-lsp-types/buildlink3.mk"
 
+CONFIGURE_ARGS+=	-f -fourmolu # Broken at the moment.
 # lib:hls-fourmolu-plugin
-.include "../../devel/fourmolu/buildlink3.mk"
-.include "../../devel/hs-ghcide/buildlink3.mk"
-.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
-.include "../../devel/hs-lens/buildlink3.mk"
-.include "../../devel/hs-lsp/buildlink3.mk"
-.include "../../sysutils/hs-process-extras/buildlink3.mk"
+#.include "../../devel/fourmolu/buildlink3.mk"
+#.include "../../devel/hs-ghcide/buildlink3.mk"
+#.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
+#.include "../../devel/hs-lens/buildlink3.mk"
+#.include "../../devel/hs-lsp/buildlink3.mk"
+#.include "../../sysutils/hs-process-extras/buildlink3.mk"
+#.include "../../textproc/hs-yaml/buildlink3.mk"
 
 # lib:hls-ormolu-plugin
 .include "../../misc/hs-extra/buildlink3.mk"
 .include "../../devel/hs-ghcide/buildlink3.mk"
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
 .include "../../devel/hs-lsp/buildlink3.mk"
-.include "../../devel/ormolu/buildlink3.mk"
 .include "../../sysutils/hs-process-extras/buildlink3.mk"
+.include "../../devel/ormolu/buildlink3.mk"
 
+CONFIGURE_ARGS+=	-f -stylishHaskell # Broken at the moment.
 # lib:hls-stylish-haskell-plugin
-.include "../../devel/hs-ghcide/buildlink3.mk"
-.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
-.include "../../devel/hs-lsp-types/buildlink3.mk"
-.include "../../devel/stylish-haskell/buildlink3.mk"
+#.include "../../devel/hs-ghcide/buildlink3.mk"
+#.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
+#.include "../../devel/hs-lsp-types/buildlink3.mk"
+#.include "../../devel/stylish-haskell/buildlink3.mk"
 
 # lib:hls-refactor-plugin
-.include "../../devel/hs-data-default/buildlink3.mk"
-.include "../../devel/hs-dlist/buildlink3.mk"
-.include "../../misc/hs-extra/buildlink3.mk"
-.include "../../devel/hs-ghc-exactprint/buildlink3.mk"
-.include "../../devel/hs-ghcide/buildlink3.mk"
-.include "../../devel/hs-hls-graph/buildlink3.mk"
-.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
-.include "../../devel/hs-lens/buildlink3.mk"
-.include "../../devel/hs-lsp/buildlink3.mk"
-.include "../../devel/hs-parser-combinators/buildlink3.mk"
-.include "../../textproc/hs-regex-applicative/buildlink3.mk"
 .include "../../textproc/hs-regex-tdfa/buildlink3.mk"
-.include "../../devel/retrie/buildlink3.mk"
-.include "../../devel/hs-syb/buildlink3.mk"
+.include "../../devel/hs-ghcide/buildlink3.mk"
+.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
+.include "../../devel/hs-lsp/buildlink3.mk"
 .include "../../devel/hs-unordered-containers/buildlink3.mk"
+.include "../../devel/hs-ghc-exactprint/buildlink3.mk"
+.include "../../misc/hs-extra/buildlink3.mk"
+.include "../../devel/hs-syb/buildlink3.mk"
+.include "../../devel/hs-hls-graph/buildlink3.mk"
+.include "../../devel/hs-dlist/buildlink3.mk"
+.include "../../devel/hs-lens/buildlink3.mk"
+.include "../../textproc/hs-regex-applicative/buildlink3.mk"
+.include "../../devel/hs-parser-combinators/buildlink3.mk"
 
 # lib:hls-semantic-tokens-plugin
-.include "../../devel/hs-data-default/buildlink3.mk"
-.include "../../devel/hs-dlist/buildlink3.mk"
 .include "../../misc/hs-extra/buildlink3.mk"
+.include "../../textproc/hs-text-rope/buildlink3.mk"
+.include "../../devel/hs-ghcide/buildlink3.mk"
+.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
+.include "../../devel/hs-lens/buildlink3.mk"
+.include "../../devel/hs-lsp/buildlink3.mk"
+.include "../../devel/hs-syb/buildlink3.mk"
+.include "../../devel/hs-dlist/buildlink3.mk"
+.include "../../devel/hs-hls-graph/buildlink3.mk"
+.include "../../devel/hs-data-default/buildlink3.mk"
+.include "../../devel/hs-stm-containers/buildlink3.mk"
+
+# lib:hls-notes-plugin
 .include "../../devel/hs-ghcide/buildlink3.mk"
 .include "../../devel/hs-hls-graph/buildlink3.mk"
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
 .include "../../devel/hs-lens/buildlink3.mk"
 .include "../../devel/hs-lsp/buildlink3.mk"
-.include "../../devel/hs-stm-containers/buildlink3.mk"
-.include "../../devel/hs-syb/buildlink3.mk"
+.include "../../textproc/hs-regex-tdfa/buildlink3.mk"
 .include "../../textproc/hs-text-rope/buildlink3.mk"
+.include "../../devel/hs-unordered-containers/buildlink3.mk"
+
+# lib:ghcide-bench-lib
+.include "../../converters/hs-aeson/buildlink3.mk"
+.include "../../devel/hs-async/buildlink3.mk"
+.include "../../misc/hs-extra/buildlink3.mk"
+.include "../../devel/hs-ghcide/buildlink3.mk"
+.include "../../devel/hs-hashable/buildlink3.mk"
+.include "../../devel/hs-lens/buildlink3.mk"
+.include "../../devel/hs-lsp-test/buildlink3.mk"
+.include "../../devel/hs-lsp-types/buildlink3.mk"
+.include "../../devel/hs-optparse-applicative/buildlink3.mk"
+.include "../../devel/hs-parser-combinators/buildlink3.mk"
+.include "../../devel/hs-safe-exceptions/buildlink3.mk"
+.include "../../devel/hs-shake/buildlink3.mk"
+.include "../../devel/hs-hls-test-utils/buildlink3.mk"
+.include "../../devel/hs-row-types/buildlink3.mk"
 
 # exe:haskell-language-server
 .include "../../devel/hs-hls-plugin-api/buildlink3.mk"
@@ -319,6 +345,23 @@ OPTPARSE_APPLICATIVE_EXECUTABLES+=	haskell-language-server-wrapper
 .include "../../devel/hs-lsp/buildlink3.mk"
 .include "../../devel/hs-lsp-types/buildlink3.mk"
 .include "../../devel/hs-unliftio-core/buildlink3.mk"
+
+# exe:ghcide-bench
+.include "../../converters/hs-aeson/buildlink3.mk"
+.include "../../devel/hs-data-default/buildlink3.mk"
+.include "../../misc/hs-extra/buildlink3.mk"
+.include "../../devel/hs-hls-plugin-api/buildlink3.mk"
+.include "../../devel/hs-hls-test-utils/buildlink3.mk"
+.include "../../devel/hs-lens/buildlink3.mk"
+.include "../../devel/hs-lsp-test/buildlink3.mk"
+.include "../../devel/hs-lsp-types/buildlink3.mk"
+OPTPARSE_APPLICATIVE_EXECUTABLES+=	\
+	ghcide-bench
+.include "../../devel/hs-optparse-applicative/application.mk"
+.include "../../devel/hs-safe-exceptions/buildlink3.mk"
+.include "../../devel/hs-hls-graph/buildlink3.mk"
+.include "../../devel/hs-shake/buildlink3.mk"
+.include "../../devel/hs-tasty-hunit/buildlink3.mk"
 
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
