--- a/games/eureka/Makefile
+++ b/games/eureka/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.12 2024/08/25 06:18:44 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2025/01/31 15:54:44 micha Exp $
 
 DISTNAME=	eureka-2.0.2
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_GITHUB:=ioan-chera/}
 GITHUB_PROJECT=	eureka-editor
