--- a/devel/hs-atomic-write/Makefile
+++ b/devel/hs-atomic-write/Makefile
@@ -1,12 +1,14 @@
-# $NetBSD: Makefile,v 1.7 2024/05/09 01:31:46 pho Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/31 15:56:11 pho Exp $
 
-DISTNAME=	atomic-write-0.2.0.7
-PKGREVISION=	5
+DISTNAME=	atomic-write-0.2.1.0
 CATEGORIES=	devel # XXX: Should be moved to sysutils
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Atomically write to a file
 LICENSE=	mit
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	filepath
 
 .include "../../sysutils/hs-temporary/buildlink3.mk"
 .include "../../devel/hs-unix-compat/buildlink3.mk"
