--- a/sysutils/u-boot-visionfive2/Makefile
+++ b/sysutils/u-boot-visionfive2/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2025/01/02 20:15:48 rjs Exp $
+# $NetBSD: Makefile,v 1.3 2025/02/01 02:31:27 gutteridge Exp $
 
 UBOOT_TARGET=		visionfive2
 UBOOT_VERSION=		2024.10
@@ -7,9 +7,6 @@ UBOOT_BIN=		spl/u-boot-spl.bin.normal.out u-boot.itb
 
 post-extract:
 	${CP} ${PREFIX}/share/opensbi/visionfive2/fw_dynamic.bin ${WRKSRC}
-
-post-build:
-	cp ${WRKSRC}/spl/u-boot-spl.bin ${WRKSRC}/u-boot-spl.bin
 
 MAKE_ENV+=	OPENSBI=${WRKSRC}/fw_dynamic.bin
 
