--- a/lang/camlp5/Makefile
+++ b/lang/camlp5/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.44 2022/11/17 10:21:14 jaapb Exp $
+# $NetBSD: Makefile,v 1.45 2025/02/01 08:34:46 wiz Exp $
 
 GITHUB_PROJECT=	camlp5
 DISTNAME=	${GITHUB_PROJECT}-8.00.03
@@ -28,10 +28,12 @@ REPLACE_PERL=	etc/mkcamlp5.pl
 
 INSTALLATION_DIRS+=	${OCAML_SITELIBDIR}/camlp5
 
+UNLIMIT_RESOURCES=	stacksize
+
 .include "../../mk/bsd.prefs.mk"
 .include "../../lang/ocaml/ocaml.mk"
 
-.if (${OCAML_USE_OPT_COMPILER} == "yes")
+.if ${OCAML_USE_OPT_COMPILER} == "yes"
 BUILD_TARGET=	world.opt
 .else
 BUILD_TARGET=	world
