--- a/devel/hs-hint/Makefile
+++ b/devel/hs-hint/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2024/05/09 01:31:59 pho Exp $
+# $NetBSD: Makefile,v 1.20 2025/02/01 08:45:10 pho Exp $
 
 DISTNAME=	hint-0.9.0.8
 PKGREVISION=	2
@@ -7,6 +7,9 @@ CATEGORIES=	devel
 MAINTAINER=	pho@cielonegro.org
 COMMENT=	Runtime Haskell interpreter (GHC API wrapper)
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	ghc
 
 .include "../../devel/hs-ghc-paths/buildlink3.mk"
 .include "../../devel/hs-random/buildlink3.mk"
