--- a/devel/hs-monoidal-containers/Makefile
+++ b/devel/hs-monoidal-containers/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.8 2024/05/09 01:32:05 pho Exp $
+# $NetBSD: Makefile,v 1.9 2025/02/01 09:11:44 pho Exp $
 
-DISTNAME=	monoidal-containers-0.6.4.0
-PKGREVISION=	2
+DISTNAME=	monoidal-containers-0.6.5.0
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -9,9 +8,7 @@ COMMENT=	Containers with monoidal accumulation
 LICENSE=	modified-bsd
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	aeson	\
-	base	\
-	deepseq
+	hashable
 
 .include "../../converters/hs-aeson/buildlink3.mk"
 .include "../../devel/hs-hashable/buildlink3.mk"
