--- a/devel/hs-protolude/Makefile
+++ b/devel/hs-protolude/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2024/05/09 01:32:08 pho Exp $
+# $NetBSD: Makefile,v 1.11 2025/02/01 09:22:10 pho Exp $
 
 DISTNAME=	protolude-0.3.4
 PKGREVISION=	1
@@ -7,6 +7,10 @@ CATEGORIES=	devel
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Sensible starting Prelude for building custom Preludes
 LICENSE=	mit
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base	\
+	hashable
 
 .include "../../devel/hs-async/buildlink3.mk"
 .include "../../devel/hs-hashable/buildlink3.mk"
