--- a/devel/hs-with-utf8/Makefile
+++ b/devel/hs-with-utf8/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2024/05/09 01:32:20 pho Exp $
+# $NetBSD: Makefile,v 1.10 2025/02/01 10:03:46 pho Exp $
 
 DISTNAME=	with-utf8-1.1.0.0
 PKGREVISION=	1
@@ -7,6 +7,10 @@ CATEGORIES=	devel
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Get your IO right on the first try
 LICENSE=	mpl-2.0
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base	\
+	filepath
 
 # lib:with-utf8
 .include "../../devel/hs-safe-exceptions/buildlink3.mk"
