--- a/devel/pointfree/Makefile
+++ b/devel/pointfree/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2024/05/09 01:32:20 pho Exp $
+# $NetBSD: Makefile,v 1.15 2025/02/01 10:06:05 pho Exp $
 
 DISTNAME=	pointfree-1.1.1.12
 PKGNAME=	${DISTNAME}
@@ -8,6 +8,9 @@ CATEGORIES=	devel
 MAINTAINER=	pho@cielonegro.org
 COMMENT=	Convert Haskell expressions to pointfree form
 LICENSE=	mit
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base
 
 .include "../../devel/hs-haskell-src-exts/buildlink3.mk"
 .include "../../mk/haskell.mk"
