--- a/textproc/hs-text-ansi/Makefile
+++ b/textproc/hs-text-ansi/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2024/05/09 01:32:47 pho Exp $
+# $NetBSD: Makefile,v 1.4 2025/02/01 10:17:10 pho Exp $
 
 DISTNAME=	text-ansi-0.3.0.1
 PKGREVISION=	2
@@ -7,6 +7,9 @@ CATEGORIES=	textproc
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Text styling for ANSI terminals
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base
 
 .include "../../textproc/hs-text-builder-linear/buildlink3.mk"
 .include "../../mk/haskell.mk"
