--- a/finance/hledger-lib/Makefile
+++ b/finance/hledger-lib/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2025/01/09 23:24:41 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2025/02/01 10:28:58 pho Exp $
 
-DISTNAME=	hledger-lib-1.33.1
+DISTNAME=	hledger-lib-1.41
 PKGNAME=	${DISTNAME}
-PKGREVISION=	3
 CATEGORIES=	finance
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -13,10 +12,13 @@ LICENSE=	gnu-gpl-v3
 # keeps getting swapped in and out and never finishes the compilation.
 HASKELL_OPTIMIZATION_LEVEL=	1
 
+.include "../../finance/hs-Decimal/buildlink3.mk"
+.include "../../textproc/hs-Glob/buildlink3.mk"
 .include "../../converters/hs-aeson/buildlink3.mk"
 .include "../../converters/hs-aeson-pretty/buildlink3.mk"
 .include "../../devel/hs-ansi-terminal/buildlink3.mk"
 .include "../../devel/hs-base-compat/buildlink3.mk"
+.include "../../textproc/hs-blaze-html/buildlink3.mk"
 .include "../../textproc/hs-blaze-markup/buildlink3.mk"
 .include "../../devel/hs-call-stack/buildlink3.mk"
 .include "../../textproc/hs-cassava/buildlink3.mk"
@@ -24,12 +26,11 @@ HASKELL_OPTIMIZATION_LEVEL=	1
 .include "../../devel/hs-cmdargs/buildlink3.mk"
 .include "../../devel/hs-colour/buildlink3.mk"
 .include "../../devel/hs-data-default/buildlink3.mk"
-.include "../../finance/hs-Decimal/buildlink3.mk"
 .include "../../textproc/hs-doclayout/buildlink3.mk"
 .include "../../misc/hs-extra/buildlink3.mk"
 .include "../../devel/hs-file-embed/buildlink3.mk"
-.include "../../textproc/hs-Glob/buildlink3.mk"
 .include "../../devel/hs-hashtables/buildlink3.mk"
+.include "../../textproc/hs-lucid/buildlink3.mk"
 .include "../../textproc/hs-megaparsec/buildlink3.mk"
 .include "../../devel/hs-microlens/buildlink3.mk"
 .include "../../devel/hs-microlens-th/buildlink3.mk"
@@ -41,11 +42,9 @@ HASKELL_OPTIMIZATION_LEVEL=	1
 .include "../../devel/hs-tasty/buildlink3.mk"
 .include "../../devel/hs-tasty-hunit/buildlink3.mk"
 .include "../../devel/hs-terminal-size/buildlink3.mk"
-.include "../../textproc/hs-text-ansi/buildlink3.mk"
 .include "../../devel/hs-timeit/buildlink3.mk"
 .include "../../devel/hs-uglymemo/buildlink3.mk"
 .include "../../devel/hs-unordered-containers/buildlink3.mk"
 .include "../../devel/hs-utf8-string/buildlink3.mk"
-.include "../../misc/hs-pager/buildlink3.mk"
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
